Fix scroll overflow bug caused by absolute positioning of sr-only

--- a/src/assets/styles/styles.css
+++ b/src/assets/styles/styles.css
@@ -276,6 +276,7 @@
     grid-auto-columns: 90%;
     grid-auto-flow: column;
     overflow-x: scroll;
+    overscroll-behavior: contain;
     padding: 1rem;
     scroll-padding: 1rem;
     scroll-snap-type: x mandatory;
